--- a/CourtApp.Web/Areas/Litigation/Views/CaseTracking/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseTracking/_ViewAll.cshtml
@@ -23,7 +23,7 @@
                @count++;
             </td>
             <td>
-                @bt.CaseTypeName
+                @bt.TypeOfCaseId
             </td>
             <td>
                 @bt.CaseNumber
@@ -35,8 +35,8 @@
                 @string.Concat(bt.TitleFirst, " V/S ", bt.TitleSecond)
             </td>
             <td>
-                @bt.CourtName
-            </td>
+               
+            </td
             <td>
                 @bt.NextDate
             </td>
