--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_ViewAll.cshtml
@@ -1,5 +1,5 @@
 @model IEnumerable<GClientViewModel>
-<table id="brandTable" class="table table-striped" width="100%" cellspacing="0">
+<table id="tblClient" class="table table-striped" width="100%" cellspacing="0">
     <thead>
         <tr>
             <th>Sno.</th>
@@ -25,7 +25,7 @@
                     @(count = count + 1)
                 </td>
                 <td>
-                    @(String.Concat(bt.FirstName,bt.MiddleName,bt.LastName))
+                    @bt.Name
                 </td>
                 <td>
                     @bt.FatherName
@@ -49,16 +49,16 @@
                             <div class="dropdown-menu shadow animated--grow-in">
                                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Edit)).Result.Succeeded)
                                 {
-                                    <a asp-area="Client" asp-controller="ManageClient" asp-action="CreateOrUpdate" asp-route-id="@bt.UId">
+                                    <a asp-area="Client" asp-controller="ManageClient" asp-action="CreateOrUpdate" asp-route-id="@bt.Id">
                                         <i class="fas fa-pencil-alt"></i> Edit
                                     </a>
 
                                 }
                                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Delete)).Result.Succeeded)
                                 {
-                                    <form id="form_delete_@bt.UId" asp-area="Client" asp-controller="manageclient" method="post"
-                                          asp-action="OnPostDelete" asp-route-id="@bt.UId" onsubmit="return jQueryModalDelete(this)">
-                                        <a href="javascript:$('#form_delete_@bt.UId').submit();" class="dropdown-item">
+                                    <form id="form_delete_@bt.Id" asp-area="Client" asp-controller="manageclient" method="post"
+                                          asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
+                                        <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item">
                                             <i class="fas fa-trash-alt"></i> Delete
                                         </a>
                                     </form>
@@ -73,6 +73,6 @@
 </table>
 <script>
     $(document).ready(function () {
-        $("#brandTable").DataTable();
+        $("#tblClient").DataTable();
     });
 </script>
