--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
@@ -1,83 +1,86 @@
-﻿@model IEnumerable<CaseViewModel>
-<table id="brandTable" class="table table-striped" width="100%" cellspacing="0">
+﻿@model IEnumerable<GetCaseViewModel>
+<table id="tblUserCase" class="table table-striped" width="100%" cellspacing="0">
     <thead>
         <tr>
             <th>Sno.</th>
-            <th>Case Type</th>
-            <th>Case No</th>
-            <th>Year</th>
+            <th>Type</th>
+            <th>Number</th>
             <th>Parties</th>
             <th>Court</th>
-            <th>Next Date</th>
-            <th>Details</th>
+            <th>Stage</th>
+            <th>Status</th>
+            <th>Next Date</th>            
             @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded
-|| (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
+            || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
             {
                 <th>Actions</th>
             }
         </tr>
     </thead>
     <tbody>
-        @{ 
+        @{
             int count = 0;
         }
         @foreach (var bt in Model)
         {
-        <tr>
-            <td>
+            <tr>
+                <td>
                     @(count = count + 1)
-            </td>
-            <td>
-                @bt.CaseTypeName
-            </td>
-            <td>
-                @bt.CaseNumber
-            </td>
-            <td>
-                @bt.CaseYear
-            </td>
-            <td>
-                @bt.Title
-            </td>
-            <td>
-                @bt.CourtName
-            </td>
-            <td>
-                    @bt.NextHearingDate
-            </td>
-            <td>
-                <a onclick="jQueryModalGet('/LawyerDiary/casestage/OnGetCreateOrEdit?id=@bt.Id', 'Case Detail')"><i class="fas fa-eye"></i></a>
-            </td>
-            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
-            {
-                <td text-right">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Action
-                        </button>
-                        <div class="dropdown-menu shadow animated--grow-in">
-                            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
-                            {
-                                <a onclick="jQueryModalGet('/LawyerDiary/casestage/OnGetCreateOrEdit?id=@bt.Id', 'Edit Brand')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
-
-                            }
-                            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded)
-
-                            {
-                                <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="casestage" method="post" asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
-                                    <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
-                                </form>
-                            }
-                        </div>
-                    </div>
                 </td>
-            }
-        </tr>
+                <td>
+                    @bt.CaseTypeName
+                </td>
+                <td>
+                    @bt.CaseNumber
+                </td>
+                <td>
+                    @string.Concat(bt.FirstTitle, " V/S ", bt.SecondTitle)
+                </td>
+                <td>
+                    @bt.CourtName
+                </td>
+                <td>
+                    @bt.CaseStage
+                </td>
+                <td>
+                    @bt.Status
+                </td>
+                <td>
+                    @bt.NextHearingDate
+                </td>
+                @* <td>
+                    <a onclick="jQueryModalGet('/LawyerDiary/casestage/OnGetCreateOrEdit?id=@bt.Id', 'Case Detail')"><i class="fas fa-eye"></i></a>
+                </td> *@
+                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
+                {
+                    <td text-right">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Action
+                            </button>
+                            <div class="dropdown-menu shadow animated--grow-in">
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
+                                {
+                                    <a onclick="jQueryModalGet('/LawyerDiary/casestage/OnGetCreateOrEdit?id=@bt.Id', 'Edit Brand')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
+
+                                }
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded)
+
+                                {
+                                    <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="casestage" method="post" asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
+                                        <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
+                                    </form>
+                                }
+                            </div>
+                        </div>
+                    </td>
+                }
+            </tr>
         }
     </tbody>
 </table>
 <script>
     $(document).ready(function () {
-        $("#brandTable").DataTable();
+        $("#tblUserCase").DataTable();
     });
 </script>
