--- a/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewData["Title"] = localizer["Proceeding Sub Head"];
-    ViewData["Caption"] = localizer["Proceeding Sub Head List"];
+    ViewData["Title"] = localizer["Work Master Sub"];
+    ViewData["Caption"] = localizer["Work Master Sub List"];
 }
-@model ProceedingSubHeadViewModel
+@model WorkMasterSubViewModel
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
         @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Create)).Result.Succeeded)
         {
-            <a onclick="jQueryModalGet('/lawyerdiary/ProceedingSubHead/OnGetCreateOrEdit','Create Proceeding Sub Head')" class="btn bg-success">
+            <a onclick="jQueryModalGet('/lawyerdiary/WorkMasterSub/OnGetCreateOrEdit','Create Work Master Sub')" class="btn bg-success">
                 <i class="fa fa-plus-square"></i> Create
             </a>
         }
@@ -31,7 +31,7 @@
             });
         });
         function loadData() {
-            $('#viewAll').load('/LawyerDiary/ProceedingSubHead/LoadAll');
+            $('#viewAll').load('/LawyerDiary/WorkMasterSub/LoadAll');
         }
     </script>
 }
