--- a/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_CreateOrEdit.cshtml
@@ -1,16 +1,16 @@
-﻿@model ProceedingSubHeadViewModel
-<form id="create-form" method="post" asp-controller="ProceedingSubHead" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
+﻿@model WorkMasterSubViewModel
+<form id="create-form" method="post" asp-controller="WorkMasterSub" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Head"]</label>
+                <label class="col-md-3 col-form-label">@localizer["Work Master"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select name="PHeadId" class="form-control select2bs4" id="PHeadId" asp-for="PHeadId" asp-items="@Model.PHeads">
+                        <select name="WMasterId" class="form-control select2bs4" id="WMasterId" asp-for="WMasterId" asp-items="@Model.WMasters">
                             <option></option>
                         </select>
                     </div>
-                    <span asp-validation-for="PHeadId" class="text-danger"></span>
+                    <span asp-validation-for="WMasterId" class="text-danger"></span>
                 </div>
             </div>
 
@@ -48,14 +48,4 @@
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
-<script type="text/javascript" language=javascript>
-    $(document).ready(function () {
-        $("#BookTypeId").select2({
-            placeholder: "Select a book type",
-            theme: "bootstrap4",
-            escapeMarkup: function (m) {
-                return m;
-            }
-        });
-    });
-</script>
+
