--- a/CourtApp.Web/Areas/Litigation/Views/CaseTracking/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseTracking/_ViewAll.cshtml
@@ -23,16 +23,16 @@
                @count++;
             </td>
             <td>
-                @bt.TypeOfCaseId
+                @bt.TypeCaseId
             </td>
             <td>
-                @bt.CaseNumber
+                @bt.Number
             </td>
             <td>
                 @bt.Year
             </td>
             <td>
-                @string.Concat(bt.TitleFirst, " V/S ", bt.TitleSecond)
+                @string.Concat(bt.FirstTitle, " V/S ", bt.SecondTitle)
             </td>
             <td>
                
